--- a/index.html
+++ b/index.html
@@ -23,13 +23,17 @@
        
         <section class="wrapper">
             <div class="div-1">
-                Div 1
+               My name is Thalia and I love creating new things!
+               I started as a healthcare worker,caring for others, which is also a passion of mine.
+               However, I decided it was time to give my creativity side a time to shine!
             </div>
             <div class="div-2">
-                Div 2
+                I decided to quit my job, and focus on learning how to code!
+                I also enjoy learning more about my artistic side, my organizational size, and my fun side!
             </div>
             <div class="div-3">
-                Div 3
+                When I'm not coding, I'm flipping clothes and furniture to support myself. 
+                I also spend alot of time caring for family, and playing with my dog Mordecai. 
             </div>
         </section>    
 
