Adjustments to html and css files

--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
         <![endif]-->
        
         <section class="wrapper">
+            <header> Hi, I'm Thalia! </header>
+            <main>I'm a <span>Responsive Designer & Developer</span> and I love to storytell using the 
+            captivating imagery. If you want to captivate an audience, you came to the right place. 
+         When I'm not working on awesome projects, I'm hiking, sanding and painting furniture or playing with my puppy Mordecai!
+        </main>
             <div class="div-1">
                My name is Thalia and I love creating new things!
                I started as a healthcare worker,caring for others, which is also a passion of mine.
@@ -35,6 +40,11 @@
                 When I'm not coding, I'm flipping clothes and furniture to support myself. 
                 I also spend alot of time caring for family, and playing with my dog Mordecai. 
             </div>
+            <footer>Let's Connect! 
+                <a href=" https://www.linkedin.com/in/thalia-gabriela-barrera-896193137/">Linked In</a>
+                <a href="https://github.com/thaliabarrera08"> Git Hub</a>
+
+            </footer>
         </section>    
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
